[package]
name = "mqtt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
diesel = { version = "2.2.1", features = ["mysql", "chrono"] }
mysql = "25.0.1"
rumqttc = "0.24.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }